testing mobile native hover

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,11 @@
   </head>
   <body>
     <div id="root" />
+    <script>
+      document.addEventListener('touchstart', function addtouchclass(e) { // first time user touches the screen
+        document.documentElement.classList.add('can-touch') // add "can-touch" class to document root using classList API
+        document.removeEventListener('touchstart', addtouchclass, false) // de-register touchstart event
+      }, false)
+    </script>
   </body>
 </html>
