fix: mobile safari address bar + testing script on delay window open

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="transparent" />
+    <meta name="theme-color" content="#dddcff" />
     <meta
       name="description"
       content="night snack club presents a year in review 2020"
@@ -14,5 +14,16 @@
   </head>
   <body>
     <div id="root" />
+    <script>
+      if (
+        /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(
+          navigator.userAgent
+        )
+      ) {
+        setTimeout(function () {
+          window.open($("#target_link").attr("href"), "_blank");
+        }, 1800);
+      }
+    </script>
   </body>
 </html>
